crates/interpreter/tests/it/transfer/snapshots/it__transfer__erc721_transfer__integration_erc721_transfer.snap
---
source: crates/interpreter/tests/it/transfer/erc721_transfer.rs
expression: res
---
InterpretationResponse {
    chain_id: 1,
    gas_used: 58674,
    block_number: 16318896,
    success: true,
    traces: [
        CallTrace {
            call_type: Call,
            from: 0x4fd9d0ee6d6564e80a9ee00c0163fc952d0a45ed,
            to: 0x6144d927ee371de7e7f8221b596f3432e7a8e6d9,
            value: Some(
                0,
            ),
        },
    ],
    logs: [
        Log {
            address: 0x6144d927ee371de7e7f8221b596f3432e7a8e6d9,
            topics: [
                0x8c5be1e5ebec7d5bd14f71427d1e84f3dd0314c0f7b2291e5b200ac8c7c3b925,
                0x0000000000000000000000004fd9d0ee6d6564e80a9ee00c0163fc952d0a45ed,
                0x0000000000000000000000000000000000000000000000000000000000000000,
                0x000000000000000000000000000000000000000000000000000000000000000b,
            ],
            data: Bytes(0x),
            block_hash: None,
            block_number: None,
            transaction_hash: None,
            transaction_index: None,
            log_index: None,
            transaction_log_index: None,
            log_type: None,
            removed: None,
        },
        Log {
            address: 0x6144d927ee371de7e7f8221b596f3432e7a8e6d9,
            topics: [
                0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef,
                0x0000000000000000000000004fd9d0ee6d6564e80a9ee00c0163fc952d0a45ed,
                0x000000000000000000000000914a7625b645d0d705b9a0a30d22583e1fb87eb1,
                0x000000000000000000000000000000000000000000000000000000000000000b,
            ],
            data: Bytes(0x),
            block_hash: None,
            block_number: None,
            transaction_hash: None,
            transaction_index: None,
            log_index: None,
            transaction_log_index: None,
            log_type: None,
            removed: None,
        },
    ],
    exit_reason: Stop,
    actions: [
        InterpretationAction {
            action_type: ERC721Send,
            address: Some(
                0x4fd9d0ee6d6564e80a9ee00c0163fc952d0a45ed,
            ),
        },
        InterpretationAction {
            action_type: ERC721Receive,
            address: Some(
                0x914a7625b645d0d705b9a0a30d22583e1fb87eb1,
            ),
        },
    ],
    asset_changes: [
        AssetChange {
            address: 0x4fd9d0ee6d6564e80a9ee00c0163fc952d0a45ed,
            before_amount: Some(
                1,
            ),
            after_amount: Some(
                0,
            ),
            amount: 1,
            action: InterpretationAction {
                action_type: ERC721Send,
                address: Some(
                    0x4fd9d0ee6d6564e80a9ee00c0163fc952d0a45ed,
                ),
            },
            token: AssetToken {
                address: 0x6144d927ee371de7e7f8221b596f3432e7a8e6d9,
                token_id: Some(
                    11,
                ),
                token_type: Erc721,
            },
        },
        AssetChange {
            address: 0x914a7625b645d0d705b9a0a30d22583e1fb87eb1,
            before_amount: Some(
                0,
            ),
            after_amount: Some(
                1,
            ),
            amount: 0,
            action: InterpretationAction {
                action_type: ERC721Receive,
                address: Some(
                    0x914a7625b645d0d705b9a0a30d22583e1fb87eb1,
                ),
            },
            token: AssetToken {
                address: 0x6144d927ee371de7e7f8221b596f3432e7a8e6d9,
                token_id: Some(
                    11,
                ),
                token_type: Erc721,
            },
        },
    ],
}
